--- a/index.html
+++ b/index.html
@@ -11,3 +11,10 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+
+<style>
+  body {
+    background-color: #f2f2f2;
+  }
+</style>
